# xenia

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua  xenia-build.py
.github/workflows/: Linux_build.yml  Windows_build.yml
cmake/: XeniaHelpers.cmake
src/xenia/app/: profile_dialogs.cc  xenia_main.cc
src/xenia/apu/: premake5.lua  xma_context.h  xma_context_master.cc  xma_context_new.cc  xma_context_new.h  xma_context_old.cc
src/xenia/cpu/backend/x64/: x64_emitter.cc  x64_seq_vector.cc  x64_sequences.cc
src/xenia/cpu/ppc/testing/: ppc_testing_main.cc
src/xenia/gpu/: gpu_flags.cc  gpu_flags.h  spirv_shader_translator.cc  spirv_shader_translator.h  texture_cache.h
src/xenia/gpu/d3d12/: CMakeLists.txt  d3d12_command_processor.cc  d3d12_render_target_cache.cc  d3d12_shared_memory.cc  d3d12_texture_cache.cc  d3d12_texture_cache.h
src/xenia/gpu/shaders/bytecode/d3d12_5_1/: resolve_full_128bpp_cs.h  resolve_full_128bpp_scaled_cs.h  resolve_full_16bpp_cs.h  resolve_full_16bpp_scaled_cs.h  (+6 more)
src/xenia/gpu/vulkan/: CMakeLists.txt  deferred_command_buffer.cc  deferred_command_buffer.h  vulkan_command_processor.cc  vulkan_command_processor.h  vulkan_pipeline_cache.cc  vulkan_pipeline_cache.h  vulkan_render_target_cache.cc  vulkan_shared_memory.cc  vulkan_texture_cache.cc  vulkan_texture_cache.h
src/xenia/kernel/: xenumerator.cc
src/xenia/ui/: windowed_app_main_win.cc
src/xenia/ui/d3d12/: CMakeLists.txt
src/xenia/ui/vulkan/: CMakeLists.txt  vulkan_device.cc  vulkan_device.h  vulkan_presenter.cc
src/xenia/ui/vulkan/functions/: device_1_0.inc
(+10 files in other folders)
